--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
   <body>
     <section class="section section-top">
         <div class="content rellax" data-rellax-speed="5">
-            <h1>Community Based Driven Video</h1>
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <h1>Event Center</h1>
+            <a href="#" class="btn btn-primary">Корпоративни клиенти</a>
+            <a href="#" class="btn btn-primary">Индивидуални клиенти</a>
         </div>
     </section>
 
     <section class="section section-stream">
         <img
             class="play rellax"
-            src="https://i.ibb.co/TvdbMhQ/play-button.png"
+            src="img/main.png"
             alt=""
             data-rellax-speed="-1" data-rellax-xs-speed="-5"
         />
@@ -82,6 +83,42 @@
             </p>
         </div>
 </section>
+
+
+<section id="section_counter">
+    <div class="container">
+      <h1 class="section-heading">We've completed</h1>
+      <h2 class="section-heading"> test test test test</h2>
+    </div>
+    <div class="container">
+      <div class="counter-grid">
+        <div class="counter-item">
+          <img src="img/app-design.png" alt="Image" class="counter-img" />
+          <h1 class="counter" data-target="1000">50
+            <p id="box-inner-text">ЗРИТЕЛИ ВИДЕЛИ НАШИТЕ ИВЕНТИ</p>
+          </h1>
+        </div>
+        <div class="counter-item">
+          <img
+            src="img//web-development.png"
+            alt="Image"
+            class="counter-img"
+          />
+          <h1 class="counter" data-target="2000">0</h1>
+        </div>
+        <div class="counter-item">
+          <img src="img//ux-design.png" alt="Image" class="counter-img" />
+          <h1 class="counter" data-target="1400">0</h1>
+        </div>
+        <div class="counter-item">
+          <img src="img//app-design.png" alt="Image" class="counter-img" />
+          <h1 class="counter" data-target="800">0</h1>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
 <footer class="footer">
   <ul>
